# echo

./: .gitignore  CLAUDE.md  README.md  config.toml.example  pyproject.toml
echo/: __init__.py  __main__.py  app.py  config.py  db.py  export.py  fetcher.py  json3.py  phon.py  pipeline.py  render.py  schema.sql  seed.py  srs.py  study.py
echo/data/: LEXIQUE_NOTICE.md
plan/: initial.md  slice-1.md  slice-2.md  slice-3.md  slice-4.md  slice-5.md  slice-6.md  workflow.md
tests/: test_export.py  test_json3.py  test_marks.py  test_phon.py  test_pipeline_validate.py  test_render.py  test_srs.py  test_study.py
tests/fixtures/: CE3foG8FRz4.fr-orig.json3  CE3foG8FRz4.info.json
web/: index.html  vite.config.js
web/src/: App.jsx  Library.jsx  Player.jsx  Review.jsx  Revise.jsx  api.js  styles.css
