[project]
name = "echo"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.107.0",
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.49.0",
    "yt-dlp>=2026.3.17",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
